--- a/src/app/home/profil/profil.page.html
+++ b/src/app/home/profil/profil.page.html
@@ -8,7 +8,7 @@
   <div class="profile-info">
   
     <div class="profile-picture" (click)="takePicture(profil.id_member)">
-      <img src="{{profil.foto}}" *ngIf="profil.foto" alt="Profile">
+      <img [src]="profil.foto" *ngIf="profil.foto" alt="Profile">
       <ion-icon name="camera-outline" (click)="takePicture(profil.id_member)"></ion-icon>
     </div>
 
