--- a/src/app/cart/cart.page.scss
+++ b/src/app/cart/cart.page.scss
@@ -90,14 +90,14 @@ ion-content {
     margin-left: 100px;
 }
 
-ion-footer {
-    padding-left: 20px;
-    padding-right: 20px;
+// ion-footer {
+//     padding-left: 20px;
+//     padding-right: 20px;
 
-    .main-button::after {
-        box-shadow: none !important;
-    }
-}
+//     .main-button::after {
+//         box-shadow: none !important;
+//     }
+// }
 .tombol{
     padding-left: 15px;
 }
