--- a/src/app/home/history/history.page.html
+++ b/src/app/home/history/history.page.html
@@ -1,43 +1,71 @@
 <ion-header>
   <ion-toolbar color="success">
-
     <ion-buttons slot="end">
-
       <ion-button class="notification" routerLink="/cart">
         <ion-icon name="cart-outline"></ion-icon>
         <!-- <ion-badge color="danger">3</ion-badge> -->
         <span>&nbsp;</span>
       </ion-button>
-
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-
-
-
   <div class="order-items" *ngFor="let item of products ;let i=index">
     <ion-card mode="ios">
       <ion-card-content>
         <div class="item-info">
-          <p>ID : {{item.id_penjualan}}</p>
-          <p>Item : {{item.total_item}}</p>
-          <p>Total : {{item.total_harga | currency:'Rp '}}</p>
-          <p>Status : {{item.status}}</p>
-          <ion-button *ngIf="item.status === 'Pending'" (click)="takePicture(item.id_penjualan)" expand="block"
-            color="warning" class="main-button">Bayar Sekarang</ion-button>
-          <ion-button *ngIf="item.bukti_bayar === 'Dibayar'" expand="block" color="success"
-            class="main-button">Lunas</ion-button>
-          <ion-button *ngIf="item.bukti_bayar === 'Dikirim'" expand="block" color="success"
-            class="main-button">Dikirim</ion-button>
-          <ion-button *ngIf="item.bukti_bayar === 'Diterima'" expand="block" color="success"
-            class="main-button">Diterima</ion-button>
-          <ion-button *ngIf="item.bukti_bayar === 'Selesai'" expand="block" color="success"
-            class="main-button">Selesai</ion-button>
+          <ion-row>
+            <ion-col size="6">
+              <p>ID Order : {{item.id_penjualan}}</p>
+              <p>Item : {{item.total_item}}</p>
+              <p>Total : {{item.total_harga | currency:'Rp '}}</p>
+             
+            </ion-col>
+            <ion-col size="6">
+              <p>{{item.created_at | date: 'dd MMMM yyyy H:mm:ss'}}</p>
+              <p>{{item.metode_bayar}}</p>
+              <p>Status : {{item.status}}</p>
+            </ion-col>
+          </ion-row>
+          <ion-button
+            *ngIf="item.status === 'Pending'"
+            (click)="takePicture(item.id_penjualan)"
+            expand="block"
+            color="warning"
+            class="main-button"
+            >Bayar Sekarang</ion-button
+          >
+          <ion-button
+            *ngIf="item.bukti_bayar === 'Dibayar'"
+            expand="block"
+            color="success"
+            class="main-button"
+            >Lunas</ion-button
+          >
+          <ion-button
+            *ngIf="item.bukti_bayar === 'Dikirim'"
+            expand="block"
+            color="success"
+            class="main-button"
+            >Dikirim</ion-button
+          >
+          <ion-button
+            *ngIf="item.bukti_bayar === 'Diterima'"
+            expand="block"
+            color="success"
+            class="main-button"
+            >Diterima</ion-button
+          >
+          <ion-button
+            *ngIf="item.bukti_bayar === 'Selesai'"
+            expand="block"
+            color="success"
+            class="main-button"
+            >Selesai</ion-button
+          >
         </div>
       </ion-card-content>
     </ion-card>
-</div>
-
+  </div>
 </ion-content>
