validasi saat bayar

--- a/src/app/cart/cart.page.html
+++ b/src/app/cart/cart.page.html
@@ -87,8 +87,8 @@
     <ion-list>
       <ion-item>
         <ion-label location="floating">Pembayaran</ion-label>
-        <ion-select value="pembayaran" [(ngModel)]="metode_bayar" placeholder="Pilih Pembayaran">
-          <ion-select-option value="COD">COD</ion-select-option>
+        <ion-select value="pembayaran" [(ngModel)]="metode_bayar"  placeholder="Pilih Pembayaran">
+          <ion-select-option value="COD" selected>COD</ion-select-option>
           <ion-select-option value="Transfer">Transfer</ion-select-option>
         </ion-select>
       </ion-item>
